# factrs-typetag

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: lib.rs  parse.rs  tagged_impl.rs  tagged_trait.rs
src/: adjacently.rs  externally.rs  internally.rs  is_serialize_str.rs  lib.rs  ser.rs
tests/: test.rs
